HVAC Backup 2/objects/Audit_Product_Item__c(1).object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audit_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Audit_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audit Inventory</label>
        <referenceTo>Audit_Inventory__c</referenceTo>
        <relationshipLabel>Audit Product Items</relationshipLabel>
        <relationshipName>Audit_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Audit Product Items</relationshipLabel>
        <relationshipName>Audit_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Qty__c</fullName>
        <label>Expected Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Audit Product Items</relationshipLabel>
        <relationshipName>Audit_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Item</label>
        <referenceTo>ProductItem</referenceTo>
        <relationshipLabel>Audit Product Items</relationshipLabel>
        <relationshipName>Audit_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Audit Product Items</relationshipLabel>
        <relationshipName>Audit_Product_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Audit Product Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>API-{0000}</displayFormat>
        <label>Audit Product Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Product Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>